# xcursor-personalizado-tkinter-linux

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
demo/: Exemplo de tkXcursor.py
src/: __init__.py  _tkXcursor.c
