[metadata]  
name = tkXcursor  
version = 2.0.0  
description = Extensão Xcursor para widgets Tkinter    
author = Igor E. Novikov  
author_email = sk1.project.org@gmail.com  
maintainer = Igor E. Novikov  
maintainer_email = sk1.project.org@gmail.com  
license = LGPL v2  
url = http://sk1project.net
download_url= https://github.com  
long_description = tkXcursor é uma extensão Python que fornece gerenciamento de cursores RGBA/animados personalizados para widgets Tkinter, Este pacote funciona no Linux Mint 22. 

# You can download the following versions: 
# Version 1.0.0: [http://sk1project.net](http://sk1project.net) 
# Version 2.0.0: [http://https://github.com](https://github.com)

# Informações do Editor  
# Editor: Rafael A. Nunes (rafa.nunes2018@hotmail.com) 2024 

